k8s/reactapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reactapp
  labels:
    app: reactapp
    environment: production
