k8s/reactapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: reactapp
spec:
  type: NodePort
  selector:
    app: reactapp-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
